--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://spacebomb.github.io/spacebomb.github.io",
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
