--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://spacebomb.github.io/spacebomb.github.io",
+  "homepage": ".",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
