--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zui",
-  "title": "ZUI",
+  "name": "SpaceBomb",
+  "title": "星空之门",
   "version": "1.7.0",
   "description": "一个基于 Bootstrap 深度定制开源前端实践方案，帮助你快速构建现代跨屏应用。",
   "main": "index.html",
