--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "SpaceBomb",
   "title": "星空之门",
-  "version": "1.7.0",
-  "description": "一个基于 Bootstrap 深度定制开源前端实践方案，帮助你快速构建现代跨屏应用。",
+  "version": "1.0.0",
+  "description": "技术宅的私人领地、种类繁多的资源文档",
   "main": "index.html",
   "directories": {
     "doc": "docs"
@@ -23,28 +23,29 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/easysoft/zui.git"
+    "url": "https://github.com/spacebomb/spacebomb.github.io.git"
   },
-  "author": "cnezsoft.com",
+  "author": "417430414@qq.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/easysoft/zui/issues"
+    "url": "https://github.com/spacebomb/spacebomb.github.io/issues"
   },
-  "homepage": "http://zui.sexy",
+  "homepage": "http://spacebomb.net",
   "devDependencies": {
     "colors": "^1.1.2",
     "del": "^2.2.0",
     "extend": "^3.0.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^5.2.1",
     "gulp-change": "^1.0.0",
     "gulp-chmod": "^1.3.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.6",
     "gulp-cssmin": "^0.1.7",
     "gulp-header": "^1.7.1",
     "gulp-jsbeautifier": "^1.0.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-jsonminify": "^1.0.0",
     "gulp-less": "^3.0.3",
     "gulp-param": "^0.6.4",
@@ -71,5 +72,8 @@
     "README.md",
     "zui.json",
     "LICENSE"
-  ]
+  ],
+  "dependencies": {
+    "gulp-load-plugins": "^1.5.0"
+  }
 }
